# DogsLife

./: Animal.cpp  Animal.h  Building.cpp  Building.h  CMakeLists.txt  Cat.cpp  Cat.h  City.cpp  City.h  Dog.cpp  Dog.h  House.cpp  House.h  Human.cpp  Human.h  Interactions.cpp  Interactions.h  Kastle.cpp  Kastle.h  Knight.cpp  Knight.h  Lecturer.cpp  Lecturer.h  Squirel.cpp  Squirel.h  Store.cpp  Store.h  Street.cpp  Street.h  Test.cpp  Test.h  main.cpp  sort.cpp  sort.h
